<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundForAllApp"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/contentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/welcome_account"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_login_fragment" />

    <EditText
        android:id="@+id/textView_Username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="username"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/this_is_my_user_name"
        android:inputType="text"
        android:padding="24dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/textView_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/shape_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="24dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_button_blue"
        android:padding="24dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView_CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="63dp"
        android:padding="15dp"
        android:text="@string/new_here_create_an_account"
        android:textColor="@color/white"
        android:textSize="@dimen/create_account_login_fragment" />
</LinearLayout>