<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundForAllApp"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/title_register_fragment"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_login_fragment" />

    <EditText
        android:id="@+id/editText_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/full_name"
        android:padding="24dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/username"
        android:padding="24dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="24dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editText_RepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="24dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_button_blue"
        android:padding="24dp"
        android:text="@string/create_account_button"
        android:textColor="@android:color/white" />
</LinearLayout>